# Ollama-RAG-hpp

./: CMakeLists.txt  LICENSE  README.md  example.cpp  main.cpp
include/: RAG.hpp  ollama.hpp
src/: RAG.cpp  RAG.h
